force-app/main/default/objects/IGMS_Classification_Mapping__mdt/IGMS_Classification_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>This Mapping is the master of IGMS Policy_Type, Complaint_Type, Complaint_Desc_Id. Used for Syncing cases to IGMS</description>
    <label>IGMS Classification Mapping</label>
    <pluralLabel>IGMS Classification Mappings</pluralLabel>
</CustomObject>