force-app/main/default/objects/IGMS_Classification_Mapping__mdt/fields/Complaint_Description_Id__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Description_Id__c</fullName>
    <label>Complaint Description Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>