force-app/main/default/objects/IGMS_Classification_Mapping__mdt/fields/Complaint_Type__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Type__c</fullName>
    <label>Complaint Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Proposal Processing</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Policy Servicing</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Survival Claims</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Death Claims</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Unfair Business Practices</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>ULIP Related</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>Others</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>