force-app/main/default/objects/IGMS_Classification_Mapping__mdt/fields/Policy_Type__c.field-meta.xml
<CustomField>
    <fullName>Policy_Type__c</fullName>
    <label>Policy Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Conventional Life Insurance Policy</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Health Insurance Policy</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Unit Linked Insurance Policy</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Others</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>